fix: use getFirst() instead of get() for subjectAlternativeName type check
Signed-off-by: Roy Ash <roy.ash456@gmail.com>